hphp/test/slow/case-type-recursive-4.php.expectf
Fatal error: "is" and "as" operators cannot be used with a recursive case type in %s/case-type-recursive-4.php on line 11
